# phone_db_rust

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  diesel.toml  flake.nix  input.css  lint.sh  osv-scanner.toml  package-lock.json  package.json  renovate.json  secrets.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  osv-scanner.yml  update-flack-lock.yml  update_hashes.yml
.helix/: languages.toml
assets/: README.md
backend/: Cargo.toml
backend/migrations/: 20241212065253_initial.down.sql  20241212065253_initial.up.sql  20241213060719_tower_sessions.down.sql  20241213060719_tower_sessions.up.sql  20241217024337_fix_defaults.down.sql  20241217024337_fix_defaults.up.sql  20241217223838_add_phone_number.down.sql  20241217223838_add_phone_number.up.sql
backend/src/: contacts.rs  datetime.rs  errors.rs  incoming_calls.rs  ldap.rs  lib.rs  main.rs  phone_calls.rs  types.rs  version.rs
backend/src/components/: app.rs  common.rs  contacts.rs  defaults.rs  mod.rs  page.rs  phone_calls.rs  root.rs  validation.rs
backend/src/database/: contacts.rs  defaults.rs  mod.rs  phone_calls.rs
backend/src/handlers/: assets.rs  contacts.rs  health_check.rs  incoming_calls.rs  mod.rs  phone_calls.rs
backend/src/oidc/: middleware.rs  mod.rs
backend/tests/: contacts.rs  health_check.rs  incoming_phone_call.rs  phone_calls.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  build.sh  index.html  package-lock.json  package.json  webpack.config.js
frontend/assets/js/: backend.js  index.js
frontend/pkg/: frontend.d.ts  frontend_bg.js  frontend_bg.wasm.d.ts
frontend/pkg/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js
frontend/src/: main.rs
migrations/2026-03-16-214003-0000_initial/: down.sql  up.sql
migrations/2026-03-16-224147-0000_create_users/: down.sql  up.sql
migrations/2026-03-22-000000-0000_defaults_action_not_null/: down.sql  up.sql
migrations/2026-03-22-000001-0000_phone_calls_source_number/: down.sql  up.sql
migrations/2026-03-23-000000-0000_indexes/: down.sql  up.sql
migrations/2026-03-23-000001-0000_drop_legacy_tables/: down.sql  up.sql
nix/: dioxus-cli.nix  module.nix
src/: dt.rs  lib.rs  main.rs
src/components/: buttons.rs  contacts.rs  defaults.rs  mod.rs  navbar.rs  phone_calls.rs  timeline.rs  times.rs  users.rs
src/forms/: buttons.rs  dialog.rs  errors.rs  fields.rs  mod.rs  saving.rs  validation.rs  values.rs
src/functions/: common.rs  contacts.rs  defaults.rs  mod.rs  phone_calls.rs  users.rs
src/models/: common.rs  contacts.rs  defaults.rs  mod.rs  phone_calls.rs  users.rs
src/server/: auth.rs  handlers.rs  incoming_calls.rs  mod.rs  session_store.rs
src/server/database/: connection.rs  mod.rs  schema.rs
src/server/database/models/: contacts.rs  defaults.rs  mod.rs  phone_calls.rs  session.rs  users.rs
src/server/database/service/: contacts.rs  defaults.rs  mod.rs  phone_calls.rs  users.rs
src/server/ldap/: connect.rs  filters.rs  manager.rs  mod.rs  query.rs
src/server/oidc/: middleware.rs  mod.rs
src/views/: auth.rs  contact_detail.rs  contacts.rs  defaults.rs  home.rs  mod.rs  phone_calls.rs  users.rs
