[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
common = { path = "../common" }
tracing = "0.1.41"
thiserror = "2.0.6"
tap = "1.0.1"
tracing-subscriber = "0.3.19"
oidc = "0.3.0"
openid = { version = "0.15.0" }
arc-swap = "1.7.1"
# See https://github.com/launchbadge/sqlx/issues/3412
tower-sessions-sqlx-store-chrono = { version = "0.14.1", features = ["postgres"] }
tower-sessions = "0.13.0"
time = "0.3.37"
url = "2.5.4"
tower-sessions-core = "0.13.0"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
itertools = "0.13.0"
simple-ldap = { version = "2.1.1", features = ["tls-native"] }
serde_qs = { version = "0.13.0", features = ["axum"] }
sqlx-conditional-queries = { version = "0.2.1", features = ["postgres"] }
tower = { version = "0.5.2", features = ["util"] }
http = "1.2.0"
features = "0.10.0"
ws = "0.9.2"
# axum-oidc = "0.5.0"
# tower = "0.5.2"
# tower-sessions = "0.13.0"

[dev-dependencies]
axum-test = { version = "16.4.0"}
